# chespedia

./: .gitignore  Cargo.toml  LICENSE  README.md  next.config.ts  package.json  tailwind.config.ts
.github/: copilot-instructions.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/explore/: page.tsx
src/app/rules/: page.tsx
src/components/: AnimationTest.tsx  ThemeProvider.tsx  searchbar.tsx
src/components/layout/: footer.tsx
