[package]
name = "chespedia-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.141", features = ["raw_value"] }
tokio = { version = "1.47.0", features = ["full"] }
vercel_runtime = "1.1.6"
reqwest = { version = "0.12", features = ["json"] }

# Each handler has to be specified as [[bin]]
[[bin]]
name = "crab"
path = "api/crab.rs"
